--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Why do I want to become a developer?</h1>
+	<h1>Why I want to become a developer?</h1>
 	<p>To get a job in Good Company, which helps me to complete my dreams.</p>
     <script type="text/javascript" src="./script.js">
 </script>
